--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>blazorGithub1</title>
-    <base href="/" />
+    <base href="blazorGithub1" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="blazorGithub1.styles.css" rel="stylesheet" />
